apps/whoami/overlays/dev/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  # labels:
  #   app.kubernetes.io/name: whoami-frontend
