apps/whoami/overlays/dev/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true, ServerSideApply=false
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/name: whoami
  name: whoami
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami:v1.10.2
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 80
          resources:
            requests:
              memory: "256Mi" 
              cpu: "250m"    # 500milliCPUs (1/2 CPU)
            limits:
              memory: "512Mi"
              cpu: "500m"
